[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redmine-peeping"
version = "0.2.0"
description = "Redmine MCP Server — AIエージェントがRedmine情報を検索・分析・レポートするMCPサーバー"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.20",
]

[project.scripts]
redmine-mcp = "redmine_peeping.mcp_server:mcp.run"

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
]

# --- ruff ---
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "TC001",  # move app import into TYPE_CHECKING
    "TC003",  # move stdlib import into TYPE_CHECKING
    "RUF001", # ambiguous unicode char in string — intentional Japanese text
    "RUF002", # ambiguous unicode char in docstring — intentional Japanese text
]

[tool.ruff.lint.isort]
known-first-party = ["redmine_peeping"]

# --- mypy ---
[tool.mypy]
python_version = "3.12"
strict = true
addopts = "-v --tb=short"
